--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
+    "electron-store": "^8.1.0",
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
